ecmascript/parser/tests/test262-error-references/fail/7e3299107ab474ce.js.stderr
error: Unexpected token Some(RBrace)
 --> $DIR/tests/test262-parser/fail/7e3299107ab474ce.js:1:6
  |
1 | ({'a'} = 0)
  |      ^

